--- a/config/.env.example
+++ b/config/.env.example
@@ -28,7 +28,7 @@ OPENAI_API_KEY=your_openai_api_key_here
 
 # Google Gemini API Key
 # Format: AIzaSy... (from Google AI Studio)
-GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_API_KEY=AIzaSyBB1h4lCBmeg0Iupq93U3wnCsdXXkEEqPs
 
 
 # ============================================================================
@@ -68,10 +68,10 @@ MODEL_CLAUDE=claude-3-5-sonnet-20241022
 MODEL_GPT=gpt-4o
 
 # Gemini Model to use (for both summarization and consolidation)
-# Recommended: gemini-2.5-pro (latest, best quality)
+# Recommended: gemini-2.5-flash (latest, best quality)
 # Alternative: gemini-2.0-pro (previous version)
 # Alternative: gemini-1.5-pro (older, still capable)
-MODEL_GEMINI=gemini-2.5-pro
+MODEL_GEMINI=gemini-2.5-flash
 
 
 # ============================================================================
@@ -83,12 +83,12 @@ MODEL_GEMINI=gemini-2.5-pro
 # Model to use for chunk summarization
 # Options: claude (recommended), gemini
 # Default: claude
-SUMMARIZER_MODEL=claude
+SUMMARIZER_MODEL=gemini
 
 # Model to use for consolidation and exam materials generation
 # Options: gpt (recommended), gemini
 # Default: gpt
-CONSOLIDATOR_MODEL=gpt
+CONSOLIDATOR_MODEL=gemini
 
 # Cost comparison per lecture:
 # Claude + GPT (default): ~$2.15
